test/samples/invalid/resolving/def_name_repeat2.maruir
struct foo {
    x: int8;
}

fun foo(b: uint8, a:int16)